fix: add missing space at page view
Closes #125

--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -210,3 +210,9 @@ tui-file.tui-file_with-right-icon {
 
   padding-right: 0.5625rem !important;
 }
+
+tui-breadcrumbs {
+  height: auto !important;
+  flex-wrap: wrap;
+  padding: 0.5rem 0;
+}
